feat(bindings): Swift, Kotlin, and Clojure bindings for rockbox-ffi
Swift uses pure-Swift dlopen (like Ruby/Python). Kotlin and Clojure use
the Java Foreign Function & Memory API (JEP 454, JDK 22+) over the shared
librockbox_ffi .dylib/.so — no static linking (the JVM loads native code
dynamically). Both JVM bindings pin Temurin 25 via a per-dir mise.toml
(Clojure also pins the Clojure CLI) and grant FFM's restricted native
access via --enable-native-access=ALL-UNNAMED.

All three expose the same metadata/Dsp/Player surfaces and a smoke test
with the shared -6.02 dB track-gain parity check; Kotlin and Clojure pass
end-to-end including Player construction.